# plant-diseases-classification

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  infer.py  pyproject.toml
.dvc/: config
checkpoints/: .gitignore  best-epoch=04-val_acc=0.9698.ckpt.dvc
configs/: config.yaml
configs/data/: plant_village.yaml
configs/logger/: default.yaml
configs/model/: baseline_cnn.yaml
configs/training/: default.yaml  smoke_test.yaml
data/: new-plant-diseases-dataset.dvc
notebooks/: colab-training-runner.ipynb
plant_diseases_classification/: __init__.py
plant_diseases_classification/data/: __init__.py  datamodule.py  download.py  transforms.py
plant_diseases_classification/inference/: __init__.py  predict.py
plant_diseases_classification/models/: __init__.py  cnn.py  module.py
plant_diseases_classification/training/: __init__.py  plots.py  train.py
plant_diseases_classification/utils/: logging.py  seed.py
scripts/: import_csv_to_mlflow.py  make_subset.py
