[project]
name = "plant-diseases-classification"
version = "0.1.0"
description = "Multi-class plant leaf disease classification (38 classes) with PyTorch Lightning."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{name = "Irina Nosova"}]
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "lightning>=2.2",
    "torchmetrics>=1.3",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "fire>=0.6",
    "mlflow>=2.10",
    "dvc[gdrive]>=3.50",
    "pillow>=10.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
]

[dependency-groups]
dev = [
    "pre-commit>=3.6",
    "ruff>=0.5",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plant_diseases_classification"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle + pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "SIM",               # simplify
    "RUF",               # ruff-specific
]
ignore = ["E501"]        # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
